maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: warning: enclosing method mur has result type Unit: return value discarded
  return estFaceMur()
  ^WallFollowerMaze:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if (mur()){
           ^